--- a/PwshExtended.csproj
+++ b/PwshExtended.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="System.Management.Automation" Version="7.3.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CommandPredictions\" />
+  </ItemGroup>
+
 </Project>
